refactor: Migración a Java 21 con modernización de código
Checklist de modernización completado:

 List<T> y Generics:
- Agregado List<Order> en OrderRepository y OrderService
- Eliminados raw types en todas las clases

 java.time API:
- Reemplazado Date/Calendar por Instant en Order
- Agregado InstantAdapter para serialización JAXB
- Actualizado OrderService para usar Instant

 Colecciones Inmutables:
- Implementado List.copyOf() en OrderRepository.findAll()

 Streams y Lambdas:
- Convertido bucle for indexado a Stream en OrderService.listByCustomer()
- Usado Collectors.toList() para transformaciones

 Switch Expressions:
- No aplicable (no había switch statements en el código)

 Records:
- Mantenido Order como clase para mantener compatibilidad JAXB

 Concurrencia:
- Eliminado Collections.synchronizedList innecesario en OrderRepository
- No se requería sincronización (single-threaded)

 Optional:
- No aplicable (la lógica de negocio no manejaba nulls)

Otros cambios:
- Migrado JAXB/JAX-WS a Jakarta EE
- Actualizado Base64 a java.util.Base64
- Configurado maven-assembly-plugin para jar ejecutable