@@ -1,16 +1,15 @@
 package com.example.legacy.legacy;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 public class LegacyBase64 {
-    public static String encode(byte[] data) throws Exception {
-        BASE64Encoder enc = new BASE64Encoder();
-        return enc.encode(data);
+    private LegacyBase64() {}
+
+    public static String encode(byte[] data) {
+        return Base64.getEncoder().encodeToString(data);
     }
 
-    public static byte[] decode(String base64) throws Exception {
-        BASE64Decoder dec = new BASE64Decoder();
-        return dec.decodeBuffer(base64);
+    public static byte[] decode(String base64) {
+        return Base64.getDecoder().decode(base64);
     }
 }
